Sustained use discounts.

--- a/sw-google-cloud-platform/course-udemy-GCP-associate-cloud-engineer/04-google-compute-optimizing-cost-and-performance/30.md
+++ b/sw-google-cloud-platform/course-udemy-GCP-associate-cloud-engineer/04-google-compute-optimizing-cost-and-performance/30.md
@@ -7,3 +7,16 @@
 | https://www.udemy.com/course/google-cloud-certification-associate-cloud-engineer/learn/lecture/25121424#overview |
 
 <br />
+<br />
+
+
+
+## Sustained Use Discounts
+
+> - Automatic discounts for running VM instances for <br />
+    significant portion of the billing month.
+
+```plaintext
+- If you use N1, N2 machine types for more than 25% of a month,
+  you get a 20% to 50% discount on every incremental minute.
+```
