Discoutn increase with graph.

--- a/sw-google-cloud-platform/course-udemy-GCP-associate-cloud-engineer/04-google-compute-optimizing-cost-and-performance/30.md
+++ b/sw-google-cloud-platform/course-udemy-GCP-associate-cloud-engineer/04-google-compute-optimizing-cost-and-performance/30.md
@@ -19,4 +19,6 @@
 ```plaintext
 - If you use N1, N2 machine types for more than 25% of a month,
   you get a 20% to 50% discount on every incremental minute.
+
+- Discount increases with usage (Graph).
 ```
