Sustained use discounts.

--- a/sw-google-cloud-platform/course-udemy-GCP-associate-cloud-engineer/04-google-compute-optimizing-cost-and-performance/30.md
+++ b/sw-google-cloud-platform/course-udemy-GCP-associate-cloud-engineer/04-google-compute-optimizing-cost-and-performance/30.md
@@ -21,4 +21,6 @@
   you get a 20% to 50% discount on every incremental minute.
 
 - Discount increases with usage (Graph).
+
+- No action requried on your part.
 ```
