Sustained use discounts.

--- a/sw-google-cloud-platform/course-udemy-GCP-associate-cloud-engineer/04-google-compute-optimizing-cost-and-performance/30.md
+++ b/sw-google-cloud-platform/course-udemy-GCP-associate-cloud-engineer/04-google-compute-optimizing-cost-and-performance/30.md
@@ -24,3 +24,6 @@
 
 - No action requried on your part.
 ```
+
+> - Applicable for instances created by Google Kubernetes <br />
+    Engine and Compute Engine.
