--- a/sw-google-cloud-platform/course-udemy-GCP-associate-cloud-engineer/04-google-compute-optimizing-cost-and-performance/30.md
+++ b/sw-google-cloud-platform/course-udemy-GCP-associate-cloud-engineer/04-google-compute-optimizing-cost-and-performance/30.md
@@ -27,3 +27,5 @@
 
 > - Applicable for instances created by Google Kubernetes <br />
     Engine and Compute Engine.
+
+> - Does not apply on certain machine types (eg. E2 and A2).
